obfuscator/parser/ObfuMiniCParser.py
# Generated from ObfuMiniC.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ObfuMiniCParser ( Parser ):

    grammarFileName = "ObfuMiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "';'", "'='", "'int'", 
                     "'char'", "'bool'", "'{'", "'}'", "'if'", "'else'", 
                     "'while'", "'for'", "'return'", "'printf'", "'scanf'", 
                     "'&'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "BOOL", "CHAR", "STRING", "NUMBER", "ID", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_compilationUnit = 0
    RULE_funcDef = 1
    RULE_paramList = 2
    RULE_param = 3
    RULE_varDecl = 4
    RULE_initList = 5
    RULE_init = 6
    RULE_type = 7
    RULE_blockStmt = 8
    RULE_stmt = 9
    RULE_exprStmt = 10
    RULE_ifStmt = 11
    RULE_loopStmt = 12
    RULE_returnStmt = 13
    RULE_ioStmt = 14
    RULE_expr = 15
    RULE_assignExpr = 16
    RULE_logicOrExpr = 17
    RULE_logicAndExpr = 18
    RULE_equalityExpr = 19
    RULE_relationalExpr = 20
    RULE_addExpr = 21
    RULE_mulExpr = 22
    RULE_unaryExpr = 23
    RULE_primaryExpr = 24
    RULE_argList = 25

    ruleNames =  [ "compilationUnit", "funcDef", "paramList", "param", "varDecl", 
                   "initList", "init", "type", "blockStmt", "stmt", "exprStmt", 
                   "ifStmt", "loopStmt", "returnStmt", "ioStmt", "expr", 
                   "assignExpr", "logicOrExpr", "logicAndExpr", "equalityExpr", 
                   "relationalExpr", "addExpr", "mulExpr", "unaryExpr", 
                   "primaryExpr", "argList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    BOOL=33
    CHAR=34
    STRING=35
    NUMBER=36
    ID=37
    WS=38
    LINE_COMMENT=39
    BLOCK_COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ObfuMiniCParser.EOF, 0)

        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.FuncDefContext,i)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.VarDeclContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = ObfuMiniCParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 52
                    self.funcDef()
                    pass

                elif la_ == 2:
                    self.state = 53
                    self.varDecl()
                    pass


                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(ObfuMiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ObfuMiniCParser.TypeContext,0)


        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.BlockStmtContext,0)


        def paramList(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ParamListContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = ObfuMiniCParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.type_()
            self.state = 62
            self.match(ObfuMiniCParser.ID)
            self.state = 63
            self.match(ObfuMiniCParser.T__0)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0):
                self.state = 64
                self.paramList()


            self.state = 67
            self.match(ObfuMiniCParser.T__1)
            self.state = 68
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.ParamContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.ParamContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = ObfuMiniCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.param()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 71
                self.match(ObfuMiniCParser.T__2)
                self.state = 72
                self.param()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ObfuMiniCParser.TypeContext,0)


        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ObfuMiniCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.type_()
            self.state = 79
            self.match(ObfuMiniCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ObfuMiniCParser.TypeContext,0)


        def initList(self):
            return self.getTypedRuleContext(ObfuMiniCParser.InitListContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ObfuMiniCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.type_()
            self.state = 82
            self.initList()
            self.state = 83
            self.match(ObfuMiniCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.InitContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.InitContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_initList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitList" ):
                listener.enterInitList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitList" ):
                listener.exitInitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitList" ):
                return visitor.visitInitList(self)
            else:
                return visitor.visitChildren(self)




    def initList(self):

        localctx = ObfuMiniCParser.InitListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.init()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 86
                self.match(ObfuMiniCParser.T__2)
                self.state = 87
                self.init()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ObfuMiniCParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit" ):
                return visitor.visitInit(self)
            else:
                return visitor.visitChildren(self)




    def init(self):

        localctx = ObfuMiniCParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ObfuMiniCParser.ID)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 94
                self.match(ObfuMiniCParser.T__4)
                self.state = 95
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = ObfuMiniCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.VarDeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.StmtContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_blockStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)




    def blockStmt(self):

        localctx = ObfuMiniCParser.BlockStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ObfuMiniCParser.T__8)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 270985849810) != 0):
                self.state = 103
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6, 7, 8]:
                    self.state = 101
                    self.varDecl()
                    pass
                elif token in [1, 4, 9, 11, 13, 14, 15, 16, 17, 27, 28, 32, 33, 34, 35, 36, 37]:
                    self.state = 102
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(ObfuMiniCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprStmtContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.BlockStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.IfStmtContext,0)


        def loopStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.LoopStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ReturnStmtContext,0)


        def ioStmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.IoStmtContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ObfuMiniCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 27, 28, 32, 33, 34, 35, 36, 37]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.exprStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.blockStmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.ifStmt()
                pass
            elif token in [13, 14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.loopStmt()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.returnStmt()
                pass
            elif token in [16, 17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 115
                self.ioStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = ObfuMiniCParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exprStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 270985592834) != 0):
                self.state = 118
                self.expr()


            self.state = 121
            self.match(ObfuMiniCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.StmtContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.StmtContext,i)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = ObfuMiniCParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(ObfuMiniCParser.T__10)
            self.state = 124
            self.match(ObfuMiniCParser.T__0)
            self.state = 125
            self.expr()
            self.state = 126
            self.match(ObfuMiniCParser.T__1)
            self.state = 127
            self.stmt()
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 128
                self.match(ObfuMiniCParser.T__11)
                self.state = 129
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ObfuMiniCParser.ExprContext)
            else:
                return self.getTypedRuleContext(ObfuMiniCParser.ExprContext,i)


        def stmt(self):
            return self.getTypedRuleContext(ObfuMiniCParser.StmtContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_loopStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStmt" ):
                listener.enterLoopStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStmt" ):
                listener.exitLoopStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStmt" ):
                return visitor.visitLoopStmt(self)
            else:
                return visitor.visitChildren(self)




    def loopStmt(self):

        localctx = ObfuMiniCParser.LoopStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_loopStmt)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(ObfuMiniCParser.T__12)
                self.state = 133
                self.match(ObfuMiniCParser.T__0)
                self.state = 134
                self.expr()
                self.state = 135
                self.match(ObfuMiniCParser.T__1)
                self.state = 136
                self.stmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(ObfuMiniCParser.T__13)
                self.state = 139
                self.match(ObfuMiniCParser.T__0)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 270985592834) != 0):
                    self.state = 140
                    self.expr()


                self.state = 143
                self.match(ObfuMiniCParser.T__3)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 270985592834) != 0):
                    self.state = 144
                    self.expr()


                self.state = 147
                self.match(ObfuMiniCParser.T__3)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 270985592834) != 0):
                    self.state = 148
                    self.expr()


                self.state = 151
                self.match(ObfuMiniCParser.T__1)
                self.state = 152
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ObfuMiniCParser.ExprContext,0)


        def getRuleIndex(self):
            return ObfuMiniCParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = ObfuMiniCParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_returnStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(ObfuMiniCParser.T__14)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 270985592834) != 0):
                self.state = 156
                self.expr()


            self.state = 159
            self.match(ObfuMiniCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ObfuMiniCParser.STRING, 0)
